--- a/client/src/Styles/Navi.css
+++ b/client/src/Styles/Navi.css
@@ -8,8 +8,9 @@
 
 
 .navtitle{ 
-  font-size: 2.2rem;
+  scale: 1.8;
   margin: 4%;
+  padding-left: 25%;
   text-shadow: 3px 3px 5px  rgba(10, 0, 10, .7);
   transition: all 1s;
 }
@@ -49,7 +50,7 @@
     font-size: 1.2rem;
   }
   .navtitle{
-    font-size: 2.0rem;
+    font-size: 2.9rem;
   }
 }
 
