--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,9 @@ html, body {
   /* } */
 /* } */
 .background_pattern {
-  background-color: rgb(236, 236, 236);
+  background-color: rgb(230, 146, 197);
+  border-top: solid 5px black;
+  border-bottom: solid 5px black;
 }
 
 
