--- a/client/src/Styles/Contact.css
+++ b/client/src/Styles/Contact.css
@@ -1,6 +1,9 @@
 .contact_container {
-    padding-bottom: 5%;
+    /* padding-bottom: 5%; */
     padding-top: 10%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contact_form {
@@ -13,14 +16,7 @@
     width: 50%;
 }
 
-.contact_title {
-    margin-left: auto;
-    margin-right: auto;    
-    font-family: 'Dancing Script', cursive; 
-    scale: 1.8;
-    position: relative;
-    top: -55px;
-}
+
 
 .contact_submit {
     padding: 2%;
@@ -90,7 +86,20 @@
     border-radius: 5px;
     width: 100%;
 }
-
+.contact_title {
+    font-family: 'Pacifico', 'cursive';
+    margin-bottom: 15%;
+    scale: 1.5;
+    text-align: center;
+}
+@media only screen and (min-width: 500px) {
+    .contact_container {
+        width: 75%;
+    }
+    .contact_title {
+        margin-bottom: 5%;
+    }
+}
 @media only screen and (max-width: 600px) {
     .contact_form {
         margin-top: -15%;
