--- a/client/src/Styles/Product.css
+++ b/client/src/Styles/Product.css
@@ -14,11 +14,10 @@
 }
 .backprod_button {
     /* background-color: #765280; */
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     border-radius: 10px;
     padding: 1%;
     letter-spacing: 2px;
-    margin: 2%;
     border: 1px solid white;
     transition: all .75s;
     /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.425); */
