--- a/client/src/Styles/Carousel.css
+++ b/client/src/Styles/Carousel.css
@@ -2,7 +2,7 @@
   margin-bottom: 15%;
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
+  width: 100%;
 }
 
 .product_carousel_image {
@@ -30,5 +30,8 @@
 @media only screen and (min-width: 700px) {
   .product_carousel_image {
     width: 60%;
+  }
+  .product_carousel {
+    width: 50%;
   }
 }
