--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,11 +6,10 @@ html, body {
 }
 
 .background_pattern {
-  /* background-image: url(./Images/webp/lncbgpattern.webp), linear-gradient(to bottom, rgb(159, 38, 192), rgb(212, 119, 238), rgb(235, 167, 253)); */
   background-image: linear-gradient(to bottom, rgb(159, 38, 192), rgb(212, 119, 238), rgb(235, 167, 253));
   background-repeat:repeat;
   background-size: 200px; 
-  height: 100%;
+  min-height: 100vh;
   margin-top: 90px;
 }
 @media only screen and (max-width: 500px) {
@@ -18,13 +17,6 @@ html, body {
     padding-top: 30px;
   }
 }
-/* @media only screen and (max-width: 600px) {
-  .background_pattern {
-    background-image: url(./Images/webp/lncbgpattern.webp), linear-gradient(to bottom, rgb(184, 73, 216), rgb(184, 73, 216) 30%,rgb(198, 110, 223), rgb(223, 151, 243) 99.9%);
-  }
-} */
-
-
 .product_page_box {
   height: 100%;
 }
@@ -64,6 +56,7 @@ html, body {
   font-size: 2.0rem;
   padding: 3.5%;
   transition: all 1.5s;
+  color: rgb(150,150,150)!important;
 }
 .size_card_selected {
   text-align: center;
